// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge组件 快照测试 基本使用 1`] = `
<span
  className="sc-gtssRu hHCvqf sinoui-badge"
>
  <svg
    aria-hidden="true"
    className="sc-bdnylx jtcMzp sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 指定封顶数值 1`] = `
Array [
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT gwlTUm"
      color="error"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT diwkDv"
      color="error"
    >
      99+
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 指定数字 1`] = `
<span
  className="sc-gtssRu hHCvqf sinoui-badge"
>
  <span
    className="sc-dlnjPT gwlTUm"
    color="error"
  >
    8
  </span>
  <svg
    aria-hidden="true"
    className="sc-bdnylx jtcMzp sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 指定颜色 1`] = `
Array [
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT fSogpw"
      color="primary"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT DdgVj"
      color="secondary"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT hyqTPb"
      color="warning"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT jjoRtf"
      color="success"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT gwlTUm"
      color="error"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT gtowST"
      color="info"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 设置为圆点形式 1`] = `
<span
  className="sc-gtssRu hHCvqf sinoui-badge sinoui-badge--dot"
>
  <span
    className="sc-dlnjPT fCUuWT"
    color="error"
  />
  <svg
    aria-hidden="true"
    className="sc-bdnylx jtcMzp sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置徽标的显示位置 1`] = `
Array [
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT gwlTUm"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT kYTyjp"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT gkKuCm"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gtssRu hHCvqf sinoui-badge"
  >
    <span
      className="sc-dlnjPT dLaMA-d"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdnylx jtcMzp sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 设置数字为0时显示 1`] = `
<span
  className="sc-gtssRu hHCvqf sinoui-badge"
>
  <span
    className="sc-dlnjPT iOcgJO"
    color="error"
  >
    0
  </span>
  <svg
    aria-hidden="true"
    className="sc-bdnylx jtcMzp sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置自定义badge的内容 1`] = `
<span
  className="sc-gtssRu hHCvqf sinoui-badge"
>
  <div
    className="sc-hKFyIo gdDtTt sinoui-badge__content"
  >
    4
  </div>
  <svg
    aria-hidden="true"
    className="sc-bdnylx jtcMzp sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置鼠标悬浮时显示的文字 1`] = `
<span
  className="sc-gtssRu hHCvqf sinoui-badge"
>
  <span
    className="sc-dlnjPT gwlTUm"
    color="error"
    title="文字"
  >
    1
  </span>
  <svg
    aria-hidden="true"
    className="sc-bdnylx jtcMzp sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;
